# open-factory

./: .dependency-cruiser.cjs  .gitignore  .prettierignore  AGENTS.md  AUDIT_REPORT.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  MediaCard.tsx  README.md  SECURITY.md  SPRINT_P_VERIFICATION.md  _test_output.txt  e2e-full-output.txt  e2e-full-v2.txt  e2e-full-v3.txt  e2e-json-output.txt  e2e-json2.txt  e2e-line-output.txt  e2e-verify.json  fix-ttc.mjs  goal-open-factory.md  goal-repro-test.txt  knip.json  package-lock.json  package.json  parse_e2e.py  playwright.config.ts  seventh-round-report.md  sixth-round-report.md  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml  release.yml
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/.cargo/: audit.toml
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/locales/: en-US.json  zh-CN.json
apps/desktop/src-tauri/src/: input_validator.rs  lib.rs  main.rs  net_guard.rs  path_validator.rs  zero_copy_io.rs
apps/desktop/src-tauri/src/commands/: ai.rs  audio_rhythm.rs  auto_tag.rs  background.rs  backup.rs  binaries.rs  cache.rs  collaboration.rs  demucs.rs  ffmpeg.rs  files.rs  gif.rs  hw_decode.rs  media.rs  media_index.rs  mod.rs  noise_reduction.rs  preview_window.rs  privacy.rs  project_crypto.rs  proxy.rs  publish.rs  recording.rs  render_preview_cache.rs  reports.rs  scene.rs  secrets.rs  share.rs  shared_library.rs  smoke.rs  spatial_audio.rs  transcode.rs  visual_highlight.rs  whisper.rs
apps/desktop/src-tauri/src/db/: mod.rs  schema.rs
apps/desktop/src-tauri/tests/: path_validator.rs  release_config.rs
docker/: Dockerfile  Dockerfile.gpu  README.md  docker-compose.yml
docs/: SPRINT_AR_VERIFICATION.md  architecture.md  design-goals.md  feature-inventory.md  plugin-development-guide.md  plugin-publishing-guide.md  product-plan.md  roadmap.md  sprint-aa-verification-report.md  sprint-ae-verification.md  sprint-af-verification.md  sprint-au-performance-report.md  sprint-k-verification-report.md  sprint-w-verification.md  sprint-z-verification.md  v4.14.0-audit-log.md  v4.37.0-sprint-l-verification.md  v4.38.0-sprint-m-verification.md
gan-harness/: generator-state.md
scripts/: check-release.mjs  hw-decode-benchmark.mjs  hw-decode-benchmark.test.mjs  media-compat-test.mjs  media-compat-test.test.mjs  perf-benchmark.mjs  perf-benchmark.test.mjs  stress-test.mjs  stress-test.test.mjs  tauri-release-config.test.mjs
tools/: fix-i18n-types.mjs  gen-ui.mjs  insert-i18n-v38.mjs  wire-dialogs.mjs  wire-ui.mjs
(+1235 files in other folders)
