[package]
name = "open-factory-desktop"
version = "0.6.0"
description = "Local-first desktop video editor MVP."
license = "MIT"
authors = ["open-factory"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "open_factory_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
