[package]
name = "open-factory-desktop"
version = "4.15.0"
description = "Local-first desktop video editor MVP."
license = "MIT"
authors = ["open-factory"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "open_factory_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
aes-gcm = "0.10"
argon2 = { version = "0.5", default-features = false }
urlencoding = "2.1"
base64 = "0.22"
keyring = "3"
lettre = { version = "0.11", default-features = false, features = ["builder", "hostname", "rustls-tls", "smtp-transport"] }
reqwest = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sysinfo = "0.30"
tauri = { version = "2", features = ["custom-protocol", "protocol-asset", "tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["macros", "net", "sync"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
zip = { version = "2", default-features = false, features = ["deflate"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
trash = "5"
